# tree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  avl.c  b.c  binary.c  binary_tree.bintree  ecoli.genome  main.c  merkle.c  quad.c  rectangle.c  red_black.c  redblack.c  search.c  test_plan.md  tree.c  tree_test.c
.github/workflows/: cmake.yml
cmake/: tree-config.cmake
include/tree/: avl.h  b.h  binary.h  merkle.h  quad.h  rectangle.h  red_black.h  redblack.h  search.h  tree.h
